Cleaned up unused variables.